[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expotion-core"
version = "1.0.0"
description = "Ядро плагинной системы Expotion для Flask приложений"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/your-username/expotion-core"
"Bug Tracker" = "https://github.com/your-username/expotion-core/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["expotion_core*"]

[tool.setuptools.package-data]
"expotion_core" = ["py.typed"]

